--- a/Examples/SharedLibrary/packages.config
+++ b/Examples/SharedLibrary/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.Reactive" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Core" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Interfaces" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Linq" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.PlatformServices" version="4.0.0-preview00001" targetFramework="net461" />
-  <package id="System.Reactive.Windows.Threading" version="4.0.0-preview00001" targetFramework="net461" />
+  <package id="System.Reactive" version="6.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Core" version="6.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Interfaces" version="6.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Linq" version="6.0.0" targetFramework="net48" />
+  <package id="System.Reactive.PlatformServices" version="6.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Windows.Threading" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="WhiteTie" version="1.3.16" targetFramework="net461" developmentDependency="true" />
 </packages>
