--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -1,39 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5BA353FF-7C86-4BD4-BE64-8FF7572A993D}</ProjectGuid>
-    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Qactive.Tests</RootNamespace>
     <AssemblyName>Qactive.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
+    <OutputPath>bin\Debug\</OutputPath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <TargetFramework>net472</TargetFramework>
+ <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL;ASYNCAWAIT;READONLYCOLLECTIONS;RX3</DefineConstants>
+    <DefineConstants>TRACE;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL;ASYNCAWAIT;READONLYCOLLECTIONS;RX3;DEBUG;NETFRAMEWORK;NET40;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL;ASYNCAWAIT;READONLYCOLLECTIONS;RX3</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DefineConstants>TRACE;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL;ASYNCAWAIT;READONLYCOLLECTIONS;RX3;DEBUG;NETFRAMEWORK;NET40;</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Reactive.Testing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
@@ -80,89 +64,27 @@
       </ItemGroup>
     </Otherwise>
   </Choose>
-  <ItemGroup>
-    <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
-      <Link>Properties\AssemblyInfoShared.cs</Link>
-    </Compile>
-    <Compile Include="Any - Exceptions.cs" />
-    <Compile Include="Any - Expressions.cs" />
-    <Compile Include="Any.cs" />
-    <Compile Include="CoreTests.cs" />
-    <Compile Include="DuplexStream.cs" />
-    <Compile Include="DuplexSubject.cs" />
-    <Compile Include="Extensions\ObservableExtensions.cs" />
-    <Compile Include="NonSerializableObject.cs" />
-    <Compile Include="Operators\CustomTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Operators\GroupJoinTests.cs" />
-    <Compile Include="Operators\JoinTests.cs" />
-    <Compile Include="QactiveAssert.cs" />
-    <Compile Include="Queries\ComplexTests.cs" />
-    <Compile Include="Queries\DuplexTests.cs" />
-    <Compile Include="Queries\NestedQueryTests.cs" />
-    <Compile Include="Operators\SelectTests.cs" />
-    <Compile Include="Operators\WhereTests.cs" />
-    <Compile Include="ServiceOptions\VisitorTests.cs" />
-    <Compile Include="Tcp\Operators\CustomTests.cs" />
-    <Compile Include="Tcp\Operators\GroupJoinTests.cs" />
-    <Compile Include="Tcp\Operators\JoinTests.cs" />
-    <Compile Include="Tcp\Operators\SelectTests.cs" />
-    <Compile Include="Tcp\Operators\WhereTests.cs" />
-    <Compile Include="Tcp\Queries\TcpComplexTests.cs" />
-    <Compile Include="Tcp\Queries\TcpDuplexTests.cs" />
-    <Compile Include="Tcp\Queries\TcpNestedQueryTests.cs" />
-    <Compile Include="Tcp\ServiceOptions\VisitorTests.cs" />
-    <Compile Include="Tcp\TcpTestService.cs" />
-    <Compile Include="Tcp\TcpTestService{TSource}.cs" />
-    <Compile Include="TestBase.cs" />
-    <Compile Include="TestDuplexMessage.cs" />
-    <Compile Include="TestAssemblyInitialize.cs" />
-    <Compile Include="TestEqualityExpressionVisitor.cs" />
-    <Compile Include="TestExpressionEqualityComparer.cs" />
-    <Compile Include="TestMessage.cs" />
-    <Compile Include="TestQactiveProvider.cs" />
-    <Compile Include="TestQbservableProtocol.cs" />
-    <Compile Include="TestService.cs" />
-    <Compile Include="TestServiceBase.cs" />
-    <Compile Include="TestService{TSource}.cs" />
-    <Compile Include="TestExpressionVisitor.cs" />
-    <Compile Include="TransportStream.cs" />
-    <Compile Include="WebSockets\Operators\CustomTests.cs" />
-    <Compile Include="WebSockets\Operators\GroupJoinTests.cs" />
-    <Compile Include="WebSockets\Operators\JoinTests.cs" />
-    <Compile Include="WebSockets\Operators\SelectTests.cs" />
-    <Compile Include="WebSockets\Operators\WhereTests.cs" />
-    <Compile Include="WebSockets\Queries\WebSocketComplexTests.cs" />
-    <Compile Include="WebSockets\Queries\WebSocketDuplexTests.cs" />
-    <Compile Include="WebSockets\Queries\WebSocketNestedQueryTests.cs" />
-    <Compile Include="WebSockets\ServiceOptions\VisitorTests.cs" />
-    <Compile Include="WebSockets\WebSocketTestService.cs" />
-    <Compile Include="WebSockets\WebSocketTestService{TSource}.cs" />
-  </ItemGroup>
+    
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Qactive.Expressions\Qactive.Expressions.csproj">
-      <Project>{63f23287-b0d8-408e-995d-bf15a85cee48}</Project>
-      <Name>Qactive.Expressions</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Source\Qactive.Providers.Streaming\Qactive.Providers.Streaming.csproj">
-      <Project>{c83a5841-a1ed-454c-9c66-238ad217ee83}</Project>
-      <Name>Qactive.Providers.Streaming</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Source\Qactive.Providers.Tcp\Qactive.Providers.Tcp.csproj">
-      <Project>{33525618-7ed6-4b4e-a4b7-945beaa372ff}</Project>
-      <Name>Qactive.Providers.Tcp</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Source\Qactive.Providers.WebSockets\Qactive.Providers.WebSockets.csproj">
-      <Project>{72a4c22f-f2fd-4d4b-b34f-3840327819ad}</Project>
-      <Name>Qactive.Providers.WebSockets</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Source\Qactive\Qactive.csproj">
-      <Project>{9b68408d-1974-4f76-9c89-eccd466a25e0}</Project>
-      <Name>Qactive</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MSTest" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
@@ -184,11 +106,5 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
